# E-Com/org/apps/auth-service/src/routes/auth.router.ts
@@ -11,14 +11,14 @@ router.post("/login-user", loginUser);
 router.post("/forgot-password-user", userForgotPassword);
 router.post("/verify-forgot-password-otp-user", verifyUserForgotPassword);
 router.post("/reset-password-user", resetUserPassword);
-router.post("/refresh-token-user", refreshToken)
+router.post("/refresh-token", refreshToken)
 router.get("/logged-in-user", isAuthenticated,getUser)
 router.post("/seller-registration", registerSeler)
 router.post("/verify-seller", verifySeller)
 router.post("/create-shop", createShop)
 router.post("/create-stripe-link", createStripeConnectLink)
 router.post("/login-seller", loginSeller)
-router.post("/logged-in-seller", isAuthenticated,isSeller,getSeller)
+router.get("/logged-in-seller", isAuthenticated,isSeller,getSeller)
 
 
 export default router;
